Create Consumptions from contract (button)

--- a/view/contract_list.xml
+++ b/view/contract_list.xml
@@ -11,5 +11,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="state"/>
     <button name="draft" string="Draft" tree_invisible="1"/>
     <button name="validate_contract" string="Validate" tree_invisible="1"/>
+    <button name="create_consumptions" string="Create Consumptions" tree_invisible="1"/>
     <button name="cancel" string="Cancel" tree_invisible="1"/>
 </tree>
